--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "install": "^0.13.0",
     "npm": "^8.10.0",
     "react": "^18.1.0",
